News UAT/force-app/main/default/objects/Useful_Link__c/Useful_Link__c.object-meta.xml
<CustomObject>
    <description>Useful Links that appear on Home Pages for NextGen</description>
    <label>Useful Link</label>
    <nameField>
        <displayFormat>UL-{000000}</displayFormat>
        <label>Useful Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Useful Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>