News UAT/force-app/main/default/objects/Useful_Link__c/fields/IMA_Home_Page_Enhanced_Sequence__c.field-meta.xml
<CustomField>
    <fullName>IMA_Home_Page_Enhanced_Sequence__c</fullName>
    <label>IMA Home Page Enhanced Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>