News UAT/force-app/main/default/objects/Useful_Link__c/fields/KAC_Home_Page_Manager_Sequence__c.field-meta.xml
<CustomField>
    <fullName>KAC_Home_Page_Manager_Sequence__c</fullName>
    <label>KAC Home Page Manager Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>