News UAT/force-app/main/default/objects/Useful_Link__c/fields/SME_Home_Page_Manager_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SME_Home_Page_Manager_Sequence__c</fullName>
    <label>SME Home Page Manager Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>