News UAT/force-app/main/default/objects/Useful_Link__c/fields/System_Administrator_Home_Page_Sequence__c.field-meta.xml
<CustomField>
    <fullName>System_Administrator_Home_Page_Sequence__c</fullName>
    <label>System Administrator Home Page Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>