News UAT/force-app/main/default/objects/Useful_Link__c/fields/The_Australian_Home_Page_Manager_Sequenc__c.field-meta.xml
<CustomField>
    <fullName>The_Australian_Home_Page_Manager_Sequenc__c</fullName>
    <label>The Australian Home Page Manager Sequenc</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>