News UAT/force-app/main/default/objects/Useful_Link__c/fields/Useful_Link_Label__c.field-meta.xml
<CustomField>
    <fullName>Useful_Link_Label__c</fullName>
    <label>Useful Link Label</label>
    <length>45</length>
    <type>Text</type>
</CustomField>