News UAT/force-app/main/default/objects/Useful_Link__c/fields/Useful_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Useful_Link_URL__c</fullName>
    <label>Useful Link URL</label>
    <type>Url</type>
</CustomField>