News UAT/force-app/main/default/objects/Useful_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Useful_Link_Label__c</columns>
    <columns>Useful_Link_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>