News UAT/force-app/main/default/objects/Useful_Link__c/listViews/IMA_Home_Page_Enhanced.listView-meta.xml
<ListView>
    <fullName>IMA_Home_Page_Enhanced</fullName>
    <columns>NAME</columns>
    <columns>Useful_Link_Label__c</columns>
    <columns>Useful_Link_URL__c</columns>
    <columns>IMA_Home_Page_Enhanced_Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IMA_Home_Page_Enhanced_Sequence__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>IMA Home Page Enhanced</label>
</ListView>