News UAT/force-app/main/default/objects/Useful_Link__c/listViews/SME_Home_Page_Enhanced_No_CPQ.listView-meta.xml
<ListView>
    <fullName>SME_Home_Page_Enhanced_No_CPQ</fullName>
    <columns>NAME</columns>
    <columns>Useful_Link_Label__c</columns>
    <columns>Useful_Link_URL__c</columns>
    <columns>SME_Home_Page_Enhanced_No_CPQ_Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SME_Home_Page_Enhanced_No_CPQ_Sequence__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>SME Home Page Enhanced No CPQ</label>
</ListView>