News UAT/force-app/main/default/objects/Useful_Link__c/listViews/System_Administrator_Home_Page.listView-meta.xml
<ListView>
    <fullName>System_Administrator_Home_Page</fullName>
    <columns>NAME</columns>
    <columns>Useful_Link_Label__c</columns>
    <columns>Useful_Link_URL__c</columns>
    <columns>System_Administrator_Home_Page_Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Administrator_Home_Page_Sequence__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>System Administrator Home Page</label>
</ListView>