News UAT/force-app/main/default/objects/Useful_Link__c/listViews/The_Australian_Home_Page_Manager.listView-meta.xml
<ListView>
    <fullName>The_Australian_Home_Page_Manager</fullName>
    <columns>NAME</columns>
    <columns>Useful_Link_Label__c</columns>
    <columns>Useful_Link_URL__c</columns>
    <columns>The_Australian_Home_Page_Manager_Sequenc__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>The_Australian_Home_Page_Manager_Sequenc__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>The Australian Home Page Manager</label>
</ListView>